# skim

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  config.example.toml  deploy.sh  project.yml  rsvp_casual_reader_spec.md
.build/: build.db  debug.yaml
.build/dd/: info.plist
.build/ios/: info.plist
App/: AppStore.swift  ContentView.swift  ExportSettings.swift  ExportView.swift  ExportViewModel.swift  FlowReadApp.swift  FrameRenderer.swift  GIFExporter.swift  Haptics.swift  IdeasView.swift  IdeasViewModel.swift  Info.plist  LinkFallbackView.swift  PasteView.swift  PrivacyInfo.xcprivacy  ReaderViewModel.swift  ReadingView.swift  ResumeView.swift  ReviewView.swift  SettingsView.swift  ShareSheet.swift  SkimApp.swift  Theme.swift  Threadline.swift  VideoExporter.swift
App/Comprehension/: AIFeaturesView.swift  AISettings.swift  ComprehensionCheckView.swift  ComprehensionCheckViewModel.swift  ComprehensionConsentView.swift  ComprehensionProvider.swift  ComprehensionService.swift  KeychainAPIKeyStore.swift  OpenAIComprehensionProvider.swift
Casks/: skim.rb  speed-reader.rb
FlowRead.xcodeproj/: project.pbxproj
Skim/: project.yml
Skim.xcodeproj/: project.pbxproj
Skim/Skim/: AppState.swift  BridgingHeader.h  (+3 more)
Skim/Skim.xcodeproj/: project.pbxproj
SpeedReader/: project.yml
docs/: shortcuts.md
scripts/: deploy-device.sh  watch_deploy.sh
skim-core/: Cargo.toml
skim-core/src/: config.rs  lib.rs  tokenizer.rs
speed-reader-core/: Cargo.toml  build.rs
speed-reader-core/src/: clipboard.rs  config.rs  lib.rs  tokenizer.rs
(+833 files in other folders)
