[package]
name = "skim-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["staticlib"]
name = "skim_core"

[dependencies]
swift-bridge = "0.1"
arboard = "3.4"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"

[build-dependencies]
swift-bridge-build = "0.1"
