[package]
name = "speed-reader-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]
name = "speed_reader_core"

[dependencies]
swift-bridge = "0.1"
arboard = "3.4"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"

[build-dependencies]
swift-bridge-build = "0.1"
